force-app/main/default/objects/Nota_fiscal_de_pedido_de_compra__c/Nota_fiscal_de_pedido_de_compra__c.object-meta.xml
<CustomObject>
    <label>Nota fiscal de pedido de compra</label>
    <nameField>
        <label>Nº da Nota Fiscal</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Notas fiscais de pedido de compra</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>