force-app/main/default/objects/Nota_fiscal_de_pedido_de_compra__c/fields/Assuntovda_Tarefa__c.field-meta.xml
<CustomField>
    <fullName>Assuntovda_Tarefa__c</fullName>
    <label>Assunto da Tarefa</label>
    <length>255</length>
    <type>Text</type>
</CustomField>