force-app/main/default/objects/Nota_fiscal_de_pedido_de_compra__c/fields/Centro_de_custo_related__c.field-meta.xml
<CustomField>
    <fullName>Centro_de_custo_related__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Centro de custo</label>
    <referenceTo>Centro_de_custo__c</referenceTo>
    <relationshipLabel>Notas fiscais de pedido de compra</relationshipLabel>
    <relationshipName>Notas_fiscais_de_pedido_de_compra</relationshipName>
    <type>Lookup</type>
</CustomField>