force-app/main/default/objects/Nota_fiscal_de_pedido_de_compra__c/fields/CNPJ_Comprador__c.field-meta.xml
<CustomField>
    <fullName>CNPJ_Comprador__c</fullName>
    <formula>Pedido_de_Compra__r.Comprador__r.CNPJ__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CNPJ Comprador</label>
    <type>Text</type>
</CustomField>