force-app/main/default/objects/Nota_fiscal_de_pedido_de_compra__c/fields/Contrato_de_Compra__c.field-meta.xml
<CustomField>
    <fullName>Contrato_de_Compra__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Será vinculado automaticamente caso o pedido de compra esteja vinculado a um contrato.</inlineHelpText>
    <label>Contrato de Compra</label>
    <referenceTo>Contrato_de_compra__c</referenceTo>
    <relationshipName>Notas_fiscais_de_compra</relationshipName>
    <type>Lookup</type>
</CustomField>