force-app/main/default/objects/Nota_fiscal_de_pedido_de_compra__c/fields/Data_de_lancamento_formatada__c.field-meta.xml
<CustomField>
    <fullName>Data_de_lancamento_formatada__c</fullName>
    <formula>IF( !ISNULL(Data_de_lan_amento__c),

IF(
DAY(Data_de_lan_amento__c ) &lt; 10,
&apos;0&apos; &amp; TEXT(DAY(Data_de_lan_amento__c )),
TEXT(DAY(Data_de_lan_amento__c ))
)
+ &quot;/&quot; +
IF(
MONTH(Data_de_lan_amento__c ) &lt; 10,
&apos;0&apos; &amp; TEXT(MONTH(Data_de_lan_amento__c )),
TEXT(MONTH(Data_de_lan_amento__c ))
)
+ &quot;/&quot; +
TEXT(YEAR(Data_de_lan_amento__c )),
&quot;Não lançada&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Data de lançamento (formatada)</label>
    <type>Text</type>
</CustomField>