force-app/main/default/objects/Nota_fiscal_de_pedido_de_compra__c/fields/descri_o_do_pedido_de_compra__c.field-meta.xml
<CustomField>
    <fullName>descri_o_do_pedido_de_compra__c</fullName>
    <formula>Pedido_de_Compra__r.Observa_o__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Observação Pedido de Compra</label>
    <type>Text</type>
</CustomField>