force-app/main/default/objects/Nota_fiscal_de_pedido_de_compra__c/fields/Escriturada_no_prazo__c.field-meta.xml
<CustomField>
    <fullName>Escriturada_no_prazo__c</fullName>
    <formula>IF(MONTH(Data_de_emissao__c) = MONTH(Data_de_lan_amento__c) &amp;&amp; YEAR(Data_de_emissao__c) = YEAR(Data_de_lan_amento__c), &apos;Sim&apos;, &apos;Não&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Escriturada no prazo</label>
    <type>Text</type>
</CustomField>