force-app/main/default/objects/Nota_fiscal_de_pedido_de_compra__c/fields/Fornecedor__c.field-meta.xml
<CustomField>
    <fullName>Fornecedor__c</fullName>
    <formula>Pedido_de_Compra__r.Fornecedor__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fornecedor</label>
    <type>Text</type>
</CustomField>