force-app/main/default/objects/Nota_fiscal_de_pedido_de_compra__c/fields/Nome_do_Fornecedor__c.field-meta.xml
<CustomField>
    <fullName>Nome_do_Fornecedor__c</fullName>
    <label>Nome do Fornecedor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>