force-app/main/default/objects/Nota_fiscal_de_pedido_de_compra__c/fields/Pedido_de_Compra__c.field-meta.xml
<CustomField>
    <fullName>Pedido_de_Compra__c</fullName>
    <label>Pedido de Compra</label>
    <referenceTo>Fornecedor__c</referenceTo>
    <relationshipName>Notas_fiscais_de_compra</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>