force-app/main/default/objects/Nota_fiscal_de_pedido_de_compra__c/fields/Razao_Social_Comprador__c.field-meta.xml
<CustomField>
    <fullName>Razao_Social_Comprador__c</fullName>
    <formula>Pedido_de_Compra__r.Comprador__r.Raz_o_Social__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Razão Social Comprador</label>
    <type>Text</type>
</CustomField>