force-app/main/default/objects/Nota_fiscal_de_pedido_de_compra__c/fields/Tarefa_lancada__c.field-meta.xml
<CustomField>
    <fullName>Tarefa_lancada__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tarefa lancada</label>
    <type>Checkbox</type>
</CustomField>