force-app/main/default/objects/Nota_fiscal_de_pedido_de_compra__c/fields/Tarefas__c.field-meta.xml
<CustomField>
    <fullName>Tarefas__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Quando uma nota fiscal de entrada, existir uma tarefa ativa esse campo vai ser marcado automaticamente</description>
    <inlineHelpText>Quando uma nota fiscal de entrada, existir uma tarefa ativa esse campo vai ser marcado automaticamente</inlineHelpText>
    <label>Tarefas</label>
    <type>Checkbox</type>
</CustomField>