force-app/main/default/objects/Nota_fiscal_de_pedido_de_compra__c/fields/URL_Anexo__c.field-meta.xml
<CustomField>
    <fullName>URL_Anexo__c</fullName>
    <label>URL Anexo</label>
    <type>Url</type>
</CustomField>