force-app/main/default/objects/Nota_fiscal_de_pedido_de_compra__c/fields/Valor_da_nota__c.field-meta.xml
<CustomField>
    <fullName>Valor_da_nota__c</fullName>
    <label>Valor da nota</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>