force-app/main/default/objects/Nota_fiscal_de_pedido_de_compra__c/fields/Ver_DANFE__c.field-meta.xml
<CustomField>
    <fullName>Ver_DANFE__c</fullName>
    <formula>IF(
    ISBLANK(URL_Anexo__c),
        IMAGE(
        &quot;https://hospcom.file.force.com/servlet/servlet.ImageServer?id=015U4000006mIX8&amp;oid=00Di0000000JVhH&amp;lastMod=1717675239000&quot;,
        &quot;N/D&quot;
    ),
    HYPERLINK(
        URL_Anexo__c,
        IMAGE(
            &quot;https://hospcom.file.force.com/servlet/servlet.ImageServer?id=015U4000006mH6O&amp;oid=00Di0000000JVhH&amp;lastMod=1717674871000&quot;,
            &quot;Clique aqui&quot;
        )
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ver DANFE</label>
    <type>Text</type>
</CustomField>