force-app/main/default/objects/Nota_fiscal_de_pedido_de_compra__c/validationRules/Somente_central_lanca.validationRule-meta.xml
<ValidationRule>
    <fullName>Somente_central_lanca</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISCHANGED(Lancada__c),
Lancada__c == true,
$User.ProfileId != &apos;00e5A000001uF6X&apos;
)</errorConditionFormula>
    <errorDisplayField>Lancada__c</errorDisplayField>
    <errorMessage>Somente o usuário Central de Notas de Entrada pode marcar como lançada.</errorMessage>
</ValidationRule>