force-app/main/default/objects/Nota_fiscal_de_pedido_de_compra__c/validationRules/Valor.validationRule-meta.xml
<ValidationRule>
    <fullName>Valor</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISCHANGED(Valor_da_nota__c),
    Valor_da_nota__c &gt; Pedido_de_Compra__r.Valor_total_comprado__c
)</errorConditionFormula>
    <errorDisplayField>Valor_da_nota__c</errorDisplayField>
    <errorMessage>O valor da nota não pode ser superior ao do pedido.</errorMessage>
</ValidationRule>