force-app/main/default/objects/Nota_fiscal_de_pedido_de_compra__c/validationRules/Valor_faturado.validationRule-meta.xml
<ValidationRule>
    <fullName>Valor_faturado</fullName>
    <active>false</active>
    <errorConditionFormula>(Pedido_de_Compra__r.Valor_faturado__c +  Valor_da_nota__c) &gt;  Pedido_de_Compra__r.Valor_total_comprado__c</errorConditionFormula>
    <errorMessage>O valor total informado de notas fiscais está ultrapassando o valor do pedido.</errorMessage>
</ValidationRule>