force-app/main/default/objects/Nota_fiscal_de_pedido_de_compra__c/listViews/Aguardando_lan_amento.listView-meta.xml
<ListView>
    <fullName>Aguardando_lan_amento</fullName>
    <columns>Ver_DANFE__c</columns>
    <columns>Data_de_emissao__c</columns>
    <columns>Fornecedor__c</columns>
    <columns>NAME</columns>
    <columns>Valor_da_nota__c</columns>
    <columns>CNPJ_Fornecedor__c</columns>
    <columns>Status__c</columns>
    <columns>Lancada__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Lancada__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Aguardando lançamento</label>
</ListView>