force-app/main/default/objects/Nota_fiscal_de_pedido_de_compra__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Ver_DANFE__c</columns>
    <columns>NAME</columns>
    <columns>Data_de_emissao__c</columns>
    <columns>Fornecedor__c</columns>
    <columns>Valor_da_nota__c</columns>
    <columns>Data_de_vencimento__c</columns>
    <columns>N_do_Pedido_de_Compra__c</columns>
    <columns>CNPJ_Fornecedor__c</columns>
    <columns>Status__c</columns>
    <columns>Lancada__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Tarefas_Lan_adas__c</columns>
    <columns>Assuntovda_Tarefa__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
    </filters>
    <label>Tudo</label>
</ListView>