force-app/main/default/objects/Nota_fiscal_de_pedido_de_compra__c/listViews/Hospcom.listView-meta.xml
<ListView>
    <fullName>Hospcom</fullName>
    <booleanFilter>1 OR 2 OR 3 OR 4 OR 5</booleanFilter>
    <columns>Ver_DANFE__c</columns>
    <columns>NAME</columns>
    <columns>Data_de_emissao__c</columns>
    <columns>Fornecedor__c</columns>
    <columns>Valor_da_nota__c</columns>
    <columns>Data_de_vencimento__c</columns>
    <columns>CNPJ_Fornecedor__c</columns>
    <columns>Status__c</columns>
    <columns>Lancada__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CNPJ_Comprador__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CNPJ_Comprador__c</field>
        <operation>contains</operation>
        <value>05.743.288/0001-08</value>
    </filters>
    <filters>
        <field>CNPJ_Comprador__c</field>
        <operation>contains</operation>
        <value>05.743.288/0006-12</value>
    </filters>
    <filters>
        <field>CNPJ_Comprador__c</field>
        <operation>contains</operation>
        <value>05.743.288/0004-50</value>
    </filters>
    <filters>
        <field>CNPJ_Comprador__c</field>
        <operation>contains</operation>
        <value>05.743.288/0005-31</value>
    </filters>
    <filters>
        <field>CNPJ_Comprador__c</field>
        <operation>contains</operation>
        <value>05.743.288/0003-70</value>
    </filters>
    <label>Hospcom</label>
</ListView>